# contexto-multiplayer

./: .gitignore  prodbuild.sh
client/: index.html
client/scripts/: elmbuild.bat  elmminbuild.bat  elmprodbuild.sh
client/src/: Game.elm  Main.elm  Sse.elm
client/src/Models/: Guess.elm  GuessScore.elm  Score.elm  SessionId.elm
client/src/Models/Game/: GameNumber.elm  GameState.elm  LastActionStatus.elm
client/src/Models/Sse/: Message.elm
client/src/Utils/: Text.elm  Utils.elm
client/src/Utils/Api/: Endpoint.elm  Request.elm  Response.elm
client/src/Utils/Data/: Error.elm  Fetched.elm  Flags.elm
client/style/: style.css
server/: Cargo.toml  Config.toml
server/src/: config.rs  data.rs  error.rs  macros.rs  main.rs  router.rs
server/src/api/: guess.rs  join_session.rs  mod.rs
server/src/game/: game_state.rs  guess.rs  mod.rs
server/src/sse/: message.rs  message_dispatch.rs  mod.rs
