[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-stream = "0.3"
toml = "0.8"
strum = { version = "0.26" }
strum_macros = { version = "0.26" }
tower-http = { version = "0.5", features = ["fs"] }
chrono = "0.4"


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
# module_name_repetitions = "allow"
# future_not_send = "allow"
